--- a/timetable.html
+++ b/timetable.html
@@ -22,19 +22,19 @@
 
       table tr.fit{
 
-        background-color: #33ff4f;
+        background-color:pink;
 
       }
 
       table tr.touch{
 
-        background-color: #ecff33;
+        background-color: orange;
 
       }
 
       table tr.prog{
 
-        background-color: #ec33dd;
+        background-color: violet;
 
       }
 
@@ -52,7 +52,7 @@
 
       .lunch{
 
-        background-color: #51d653;
+        background-color: green;
 
       }
 
@@ -70,13 +70,13 @@
 
       .gavel{
 
-        background-color: #FFC300;
+        background-color: powderblue;
 
       }
 
       .end{
 
-        background-color: #cfb8b8;
+        background-color: butter;
 
       }
 
